:bento:add SampleSimilarity to lfs

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,21 @@ src/ss/*.py filter=lfs diff=lfs merge=lfs -text
 *.js filter=lfs diff=lfs merge=lfs -text
 *.css filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+src/ss/bin/SampleSimilarity filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5Core.prl filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5Network.prl filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5Xml.prl filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5XmlPatterns.prl filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libdeflate.so.0 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libicudata.so.68.2 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libicui18n.so.68.2 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libz.so.1.2.11 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5Core.so.5.12.9 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5Network.so.5.12.9 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libcppCORE.so.1.0.0 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libcppNGS.so.1.0.0 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libcppXML.so.1.0.0 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libhts.so.1.15.1 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libicuuc.so.68.2 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5Xml.so.5.12.9 filter=lfs diff=lfs merge=lfs -text
+src/ss/lib/libQt5XmlPatterns.so.5.12.9 filter=lfs diff=lfs merge=lfs -text
